feat: template added to repo

--- a/typst.toml
+++ b/typst.toml
@@ -1,18 +1,16 @@
 # for a description of available keys, see https://github.com/typst/packages/?tab=readme-ov-file#package-format
 
 [package]
-name = ""
-version = "0.1.0"
+name = "modern-ugr-report"
+version = "1.0.0"
 entrypoint = "src/lib.typ"
-authors = []
-license = "Unlicense"
-description = ""
-homepage = ""
-repository = ""
-keywords = []
-categories = []
-disciplines = []
-compiler = ""
+authors = ["Pablo Luque Salguero <@pluque01>"]
+license = "MIT"
+description = "Unofficial University Of Granada report template"
+repository = "https://github.com/pluque01/modern-ugr-report"
+keywords = ["report", "ugr", "University of Granada"]
+categories = ["report"]
+compiler = "0.12"
 exclude = [
 	".github",
 	"docs",
@@ -22,10 +20,7 @@ exclude = [
 	"Justfile",
 ]
 
-# [template]
-# path = "template"
-# entrypoint = "main.typ"
-# thumbnail = "thumbnail.png"
-
-# [tool.mytool]
-# foo = "bar"
+[template]
+path = "template"
+entrypoint = "main.typ"
+thumbnail = "thumbnail.png"
